--- a/kangaroo-web/styles/globals.css
+++ b/kangaroo-web/styles/globals.css
@@ -1,6 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
 @tailwind base;
+
+@import url('primereact/resources/themes/saga-purple/theme.css');
+@import url('primereact/resources/primereact.min.css');
+@import url('primeicons/primeicons.css');
+
 @tailwind components;
 @tailwind utilities;
 
